--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,2 +1,13 @@
-$red: red;
-$green: green;
+// Colors
+$primary-color: blue;
+
+$white: white;
+
+// Sizes
+
+$w-sm: 300px;
+
+$br-sm: 5px;
+$br-md: 11px;
+$br-lg: 17;
+$br-full: 50%;
