added toasts logic

--- a/src/partials/toasts.module.scss
+++ b/src/partials/toasts.module.scss
@@ -30,9 +30,9 @@ $p: 0.3em;
     p {
       display: inline-block;
 
-      @include tablet {
-        color: red;
-      }
+      // @include tablet {
+      //   color: red;
+      // }
     }
 
     b {
